build_output5.txt
Starting a Gradle Daemon, 1 busy and 1 incompatible and 3 stopped Daemons could not be reused, use --status for details
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:mapDebugSourceSetPaths
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata
> Task :app:mergeDebugResources
> Task :app:processDebugMainManifest
> Task :app:dataBindingGenBaseClassesDebug
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:checkDebugDuplicateClasses
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE
> Task :app:processDebugManifestForPackage
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac
warning: [options] source value 8 is obsolete and will be removed in a future release
warning: [options] target value 8 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.

> Task :app:mergeExtDexDebug

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\EthanK\AndroidStudioProjects\MyApplication2\app\src\main\java\com\example\myapplication\data\local\WatchlistItem.java:7: warning: There are multiple good constructors and Room will pick the no-arg constructor. You can use the @Ignore annotation to eliminate unwanted constructors.
public class WatchlistItem {
       ^
C:\Users\EthanK\AndroidStudioProjects\MyApplication2\app\src\main\java\com\example\myapplication\data\local\WatchlistItem.java:7: warning: There are multiple good constructors and Room will pick the no-arg constructor. You can use the @Ignore annotation to eliminate unwanted constructors.
public class WatchlistItem {
       ^
C:\Users\EthanK\AndroidStudioProjects\MyApplication2\app\src\main\java\com\example\myapplication\worker\TrendingWorker.java:7: error: package androidx.work.rxjava3 does not exist
import androidx.work.rxjava3.RxWorker;
                            ^
C:\Users\EthanK\AndroidStudioProjects\MyApplication2\app\src\main\java\com\example\myapplication\worker\TrendingWorker.java:17: error: cannot find symbol
public class TrendingWorker extends RxWorker {
                                    ^
  symbol: class RxWorker
C:\Users\EthanK\AndroidStudioProjects\MyApplication2\app\src\main\java\com\example\myapplication\worker\TrendingWorker.java:29: error: cannot find symbol
    public Single<Result> createWork() {
                  ^
  symbol:   class Result
  location: class TrendingWorker
3 errors
5 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.9/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 44s
27 actionable tasks: 11 executed, 16 up-to-date
